--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "elooly",
   "main": "index.js",
   "scripts": {
-    "test": "tsc && node index.js"
+    "test": "node test.ts"
   },
   "dependencies": {
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^24.0.14",
+    "canvas": "^3.1.2",
+    "jsdom": "^26.1.0",
     "ts": "^0.2.2"
   }
 }
