--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-node_modules/
 .vscode
-package-lock.json
+test.ts
+test.js
+
+# Dependency directories
+node_modules/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
