--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "File format for creating JS canvases",
   "keywords": [
     "canvas",
-    "format"
+    "file format"
   ],
   "license": "MIT",
   "author": "elooly",
@@ -12,16 +12,14 @@
   "type": "module",
   "scripts": {
     "test": "tsc && node dist/test.js",
-    "index": "tsc && node dist/",
     "build": "tsc"
   },
-  "dependencies": {
-    "typescript": "^5.8.3"
-  },
   "devDependencies": {
+    "typescript": "^5.8.3",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.0.14",
     "canvas": "^3.1.2",
-    "jsdom": "^26.1.0"
+    "jsdom": "^26.1.0",
+    "path2d": "^0.3.1"
   }
 }
